--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url:jdbc:mysql://localhost:3306/todolist
-spring.datasource.username:root
-spring.datasource.password:meiguins3974
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.datasource.url:${DATABASE_URL}
+spring.datasource.username:${DATABASE_USERNAME}
+spring.datasource.password:${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=
 spring.jpa.hibernate.ddl-auto=update
